# Nintendo-R-and-D-HireMe

./: .gitignore  Brouillon.cpp  HireMe.c  HireMe_Base.c  Makefile  Nintend_Sponsored_Challenge.cpp  Nintendo_Sponsored_Challenge.cpp  README.md
src/: CMakeLists.txt  HireMe_AllsCommon.c  HireMe_SimplifiedForward.c  HireMe_SolverAllIt.c  HireMe_SolverAllRand.c  HireMe_SolverGenetic.c  HireMe_SolverRandom.c  HireMe_args.c  HireMe_genetic_func.c  HireMe_globals.c  HireMe_main.c  HireMe_prints.c  HireMe_randoms.c  HireMe_sorting.c  HireMe_strings.c  HireMe_utils.c
src/include/: HireMe_AllsCommon.h  HireMe_SimplifiedForward.h  HireMe_SolverAllIt.h  HireMe_SolverAllRand.h  HireMe_SolverGenetic.h  HireMe_SolverRandom.h  HireMe_args.h  HireMe_bit_calculs.h  HireMe_errors.h  HireMe_genetic_func.h  HireMe_globals.h  HireMe_prints.h  HireMe_randoms.h  HireMe_sorting.h  HireMe_strings.h  HireMe_u128.h  HireMe_u16.h  HireMe_u32.h  HireMe_u64.h  HireMe_u8.h  HireMe_utils.h
